--- a/About.html
+++ b/About.html
@@ -28,46 +28,42 @@
     </nav>
   </header>
   <!-- Main content -->
+ <!-- Main content -->
   <main>
-   <h1>
-    ABOUT
-   </h1>
-   <section>
-    <h2>
-     Section Heading
-    </h2>
-    <img alt="Campus Life Group Photo" src="IMG_2109.jpg">
-    <p>
-    <center> Welcome to Campus Life at USC Beaufort!
-     <br>
-     <br>
-     Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark. We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball. Looking to get involved or make your mark? We oversee all student clubs and organizations—from cultural and academic groups to special interest and leadership councils. If you can't find what you're looking for, we'll help you start something new. We also offer workshops on leadership development, event planning, and community outreach—because we believe your college experience should prepare you for more than just a degree.
-     Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus. At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way.
-     This is your time—make it count. Dive into Campus Life.
-    </p> </center>
-   </section>
-   <!-- Photo grid -->
-   <section>
-    <h2>
-     Section Heading
-    </h2>
-   <center> <div>
-     <img alt="Students at fountain" src="USCB-Student-Ambassadors-in-Rec-Center.jpg
-">
-     <img alt="Students playing volleyball" src="StudentPhoto.jpeg">
-     <img alt="Group holding USCB flag" src="Lamda_Pi_Eta.png">
-    </div>
-    <div>
-     <img alt="Students posing in gym" src="USCB-Student-Ambassadors-in-Rec-Center.jpg">
-     <img alt="Group cheering" src="USCB-Students.jpg">
-     <img alt="Group photo in front of Hargray building" src="admissions-menu3.jpg">
-    </div>
-    <div>
-     <img alt="Group outdoors" src="by-the-river-team_600px.jpg">
-     <img alt="Students working on laptop" src="fins_up_orientation_leaders.jpg">
-     <img alt="Universal trip group" src="2024-03-15-tour-hargray.jpeg">
-    </div> </center>
-   </section>
+    <h1>ABOUT</h1>
+
+    <section>
+      <img src="path-to-group-photo.jpg" alt="Campus Life Group Photo" />
+      <p>
+        Welcome to Campus Life at USC Beaufort! <br><br>
+        Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark. <br><br>
+        We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball. <br><br>
+        Looking to get involved or make your mark? We oversee all student clubs and organizations—from cultural and academic groups to special interest and leadership councils. If you can't find what you're looking for, we'll help you start something new. We also offer workshops on leadership development, event planning, and community outreach—because we believe your college experience should prepare you for more than just a degree. <br><br>
+        Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus. <br><br>
+        At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way. <br><br>
+        This is your time—make it count. Dive into Campus Life.
+      </p>
+    </section>
+
+    <!-- Photo grid -->
+    <section>
+      <div>
+        <img src="path-to-photo1.jpg" alt="Students at fountain" />
+        <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
+        <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
+      </div>
+      <div>
+        <img src="path-to-photo4.jpg" alt="Students posing in gym" />
+        <img src="path-to-photo5.jpg" alt="Group cheering" />
+        <img src="path-to-photo6.jpg" alt="Group photo in front of Hargray building" />
+      </div>
+      <div>
+        <img src="path-to-photo7.jpg" alt="Group outdoors" />
+        <img src="path-to-photo8.jpg" alt="Students working on laptop" />
+        <img src="path-to-photo9.jpg" alt="Universal trip group" />
+      </div>
+    </section>
   </main>
- </body>
+
+</body>
 </html>
