--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Campus Life</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="About.css" />
 </head>
 <body>
 
@@ -48,6 +48,7 @@
     <!-- Photo grid -->
     <section>
       <div>
+      <div class="photo-grid">
         <img src="path-to-photo1.jpg" alt="Students at fountain" />
         <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
         <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
