--- a/About.html
+++ b/About.html
@@ -46,24 +46,17 @@
     </section>
 
     <!-- Photo grid -->
-    <section>
-      <div>
-      <div class="photo-grid">
-        <img src="path-to-photo1.jpg" alt="Students at fountain" />
-        <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
-        <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
-      </div>
-      <div>
-        <img src="path-to-photo4.jpg" alt="Students posing in gym" />
-        <img src="path-to-photo5.jpg" alt="Group cheering" />
-        <img src="path-to-photo6.jpg" alt="Group photo in front of Hargray building" />
-      </div>
-      <div>
-        <img src="path-to-photo7.jpg" alt="Group outdoors" />
-        <img src="path-to-photo8.jpg" alt="Students working on laptop" />
-        <img src="path-to-photo9.jpg" alt="Universal trip group" />
-      </div>
-    </section>
+ <section class="photo-grid">
+  <img src="path-to-photo1.jpg" alt="Students at fountain" />
+  <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
+  <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
+  <img src="path-to-photo4.jpg" alt="Students posing in gym" />
+  <img src="path-to-photo5.jpg" alt="Group cheering" />
+  <img src="path-to-photo6.jpg" alt="Group photo in front of Hargray building" />
+  <img src="path-to-photo7.jpg" alt="Group outdoors" />
+  <img src="path-to-photo8.jpg" alt="Students working on laptop" />
+  <img src="path-to-photo9.jpg" alt="Universal trip group" />
+</section>
   </main>
 <footer>
   <nav>
