--- a/events.html
+++ b/events.html
@@ -26,8 +26,9 @@
     </ul>
   </nav>
 </header>
-  <main class="container">
-    <h1 class="page-title">EVENTS</h1>
+ <!-- Main content -->
+  <main>
+    <h1>ABOUT</h1>
 <center>
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
