--- a/About.html
+++ b/About.html
@@ -32,8 +32,8 @@
   <main>
     <h1>ABOUT</h1>
 
-    <section>
-      <img src="path-to-group-photo.jpg" alt="Campus Life Group Photo" />
+    <section> <center>
+      <img src="2024-03-15-tour-hargray.jpeg" alt="Campus Life Group Photo" />
       <p>
         Welcome to Campus Life at USC Beaufort! <br><br>
         Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark. <br><br>
@@ -42,20 +42,20 @@
         Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus. <br><br>
         At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way. <br><br>
         This is your time—make it count. Dive into Campus Life.
-      </p>
+      </p> </center>
     </section>
 
     <!-- Photo grid -->
  <section class="photo-grid">
-  <img src="path-to-photo1.jpg" alt="Students at fountain" />
-  <img src="path-to-photo2.jpg" alt="Students playing volleyball" />
-  <img src="path-to-photo3.jpg" alt="Group holding USCB flag" />
-  <img src="path-to-photo4.jpg" alt="Students posing in gym" />
-  <img src="path-to-photo5.jpg" alt="Group cheering" />
-  <img src="path-to-photo6.jpg" alt="Group photo in front of Hargray building" />
-  <img src="path-to-photo7.jpg" alt="Group outdoors" />
-  <img src="path-to-photo8.jpg" alt="Students working on laptop" />
-  <img src="path-to-photo9.jpg" alt="Universal trip group" />
+  <img src="2024-03-15-tour-hargray.jpeg" alt="Students at fountain" />
+  <img src="volleyball_042.jpg" alt="Students playing volleyball" />
+  <img src="Housing2021.jpg" alt="Group holding USCB flag" />
+  <img src="IMG_2109.jpg" alt="Students posing in gym" />
+  <img src="IMG_42661.jpg" alt="Group cheering" />
+  <img src="Lamda_Pi_Eta.png" alt="Group photo in front of Hargray building" />
+  <img src="Screenshot 2025-05-23 092746.jpg" alt="Group outdoors" />
+  <img src="USCB-Students.jpg" alt="Students working on laptop" />
+  <img src="admissions-blue-bar_600px.jpg" alt="Universal trip group" />
 </section>
   </main>
 <footer>
