--- a/events.html
+++ b/events.html
@@ -33,21 +33,25 @@
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
+<section class="links-section">
+  <!-- Card 1 -->
+  <div class="link-card">
+    <img src="fins_up_orientation_leaders.jpg" alt="Presence">
+    <a href="https://uscb.presence.io/" target="_blank">Presence</a>
+  </div>
 
-<div class="links-section">
-  <a class="link-card" href="https://uscb.presence.io/" target="_blank">
-    <img src="fins_up_orientation_leaders.jpg" alt="Presence" />
-    <p>Presence</p>
-  </a>
-  <a class="link-card" href="https://www.imleagues.com/spa/portal/home" target="_blank">
-    <img src="volleyball_042.jpg" alt="IMLeagues" />
-    <p>IMLeagues</p>
-  </a>
-  <a class="link-card" href="https://www.uscb.edu/" target="_blank">
-    <img src="by-the-river-team_600px.jpg" alt="USCB.edu" />
-    <p>USCB.edu</p>
-  </a>
-</div>
+  <!-- Card 2 -->
+  <div class="link-card">
+    <img src="volleyball_042.jpg" alt="IMLeagues">
+    <a href="https://www.imleagues.com/spa/portal/home" target="_blank">IMLeagues</a>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="link-card">
+    <img src="by-the-river-team_600px.jpg" alt="USCB.edu">
+    <a href="https://www.uscb.edu/" target="_blank">USCB.edu</a>
+  </div>
+</section>
   </main>
 
   <footer>
