--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
 </header>
  <!-- Main content -->
   <main>
-    <h1>ABOUT</h1>
+  <center>  <h1>EVENTS</h1> </center>
 <center>
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
