--- a/About.html
+++ b/About.html
@@ -35,6 +35,7 @@
     <section> <center>
       <img src="2024-03-15-tour-hargray.jpeg" alt="Campus Life Group Photo" />
       <p>
+        <div class="about-text">
         Welcome to Campus Life at USC Beaufort! <br><br>
         Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark. 
         We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball. 
@@ -42,7 +43,7 @@
         Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus. 
         At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way. 
         This is your time—make it count. Dive into Campus Life.
-      </p> </center>
+      </p> </div> </center>
     </section>
 
     <!-- Photo grid -->
