--- a/events.html
+++ b/events.html
@@ -33,6 +33,7 @@
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
+  <center>
 <section class="links-section">
   <!-- Card 1 -->
   <div class="link-card">
@@ -50,8 +51,9 @@
   <div class="link-card">
     <img src="by-the-river-team_600px.jpg" alt="USCB.edu">
     <a href="https://www.uscb.edu/" target="_blank">USCB.edu</a>
-  </div>
+  </div> 
 </section>
+  </center>
   </main>
 
   <footer>
