--- a/About.html
+++ b/About.html
@@ -47,7 +47,7 @@
     </section>
 
     <!-- Photo grid -->
- <section class="photo-grid">
+ <section class="about-photo-grid">
   <img src="2024-03-15-tour-hargray.jpeg" alt="Students at fountain" />
   <img src="volleyball_042.jpg" alt="Students playing volleyball" />
   <img src="Housing2021.jpg" alt="Group holding USCB flag" />
