--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <div>
-     <center> <img alt="USCB Campus Life Logo" src="Campus Life 2C.png" /> </center>
+      <center><img alt="USCB Campus Life Logo" src="Campus Life 2C.png" /></center>
     </div>
     <nav>
       <ul>
@@ -27,63 +27,68 @@
       </ul>
     </nav>
   </header>
+
   <!-- Main content -->
- <!-- Main content -->
   <main>
     <h1>ABOUT</h1>
 
-    <section> <center>
+    <!-- Intro image -->
+    <div class="about-section">
       <img src="2024-03-15-tour-hargray.jpeg" alt="Campus Life Group Photo" />
-      <p>
-        <div class="about-text">
-        Welcome to Campus Life at USC Beaufort! <br><br>
-        Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark. 
-        We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball. 
-        Looking to get involved or make your mark? We oversee all student clubs and organizations—from cultural and academic groups to special interest and leadership councils. If you can't find what you're looking for, we'll help you start something new. We also offer workshops on leadership development, event planning, and community outreach—because we believe your college experience should prepare you for more than just a degree. 
-        Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus. 
-        At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way. 
-        This is your time—make it count. Dive into Campus Life.
-      </p> </div> </center>
-    </section>
+    </div>
+
+    <!-- Intro paragraph text -->
+    <div class="about-text">
+      <p>Welcome to Campus Life at USC Beaufort!</p>
+      <p>Campus Life is the heartbeat of student engagement at USCB—and we're proud to be the newest and most spirited department on campus! Blending the energy of Student Life with the excitement of Campus Recreation, we're here to create unforgettable experiences for every Sand Shark.</p>
+      <p>We host a little bit of everything—from DIY craft nights and sunset yoga on the bluff, to open mic coffeehouse evenings, game day watch parties, and monthly themed socials (yes, Sharkchella is real!). Our intramural leagues and tournament series keep the competitive spirit alive, with everything from flag football and spikeball to Mario Kart and pickleball.</p>
+      <p>Looking to get involved or make your mark? We oversee all student clubs and organizations—from cultural and academic groups to special interest and leadership councils. If you can't find what you're looking for, we'll help you start something new. We also offer workshops on leadership development, event planning, and community outreach—because we believe your college experience should prepare you for more than just a degree.</p>
+      <p>Need a place to relax or recharge? Drop by the Campus Life Lounge in the Sandbar Center—home to comfy couches, free popcorn Fridays, a crafting nook, and the best playlist on campus.</p>
+      <p>At Campus Life, we believe college should be more than just class schedules and exams. It should be meaningful, memorable, and fun. Whether you're here to connect, lead, compete, create, or simply enjoy the vibe, we're here to support you every step of the way.</p>
+      <p>This is your time—make it count. Dive into Campus Life.</p>
+    </div>
 
     <!-- Photo grid -->
- <section class="about-photo-grid">
-  <img src="2024-03-15-tour-hargray.jpeg" alt="Students at fountain" />
-  <img src="volleyball_042.jpg" alt="Students playing volleyball" />
-  <img src="Housing2021.jpg" alt="Group holding USCB flag" />
-  <img src="IMG_2109.jpg" alt="Students posing in gym" />
-  <img src="IMG_42661.jpg" alt="Group cheering" />
-  <img src="Lamda_Pi_Eta.png" alt="Group photo in front of Hargray building" />
-  <img src="Screenshot 2025-05-23 092746.jpg" alt="Group outdoors" />
-  <img src="USCB-Students.jpg" alt="Students working on laptop" />
-  <img src="admissions-blue-bar_600px.jpg" alt="Universal trip group" />
-</section>
+    <section class="about-photo-grid">
+      <img src="2024-03-15-tour-hargray.jpeg" alt="Students at fountain" />
+      <img src="volleyball_042.jpg" alt="Students playing volleyball" />
+      <img src="Housing2021.jpg" alt="Group holding USCB flag" />
+      <img src="IMG_2109.jpg" alt="Students posing in gym" />
+      <img src="IMG_42661.jpg" alt="Group cheering" />
+      <img src="Lamda_Pi_Eta.png" alt="Group photo in front of Hargray building" />
+      <img src="Screenshot 2025-05-23 092746.jpg" alt="Group outdoors" />
+      <img src="USCB-Students.jpg" alt="Students working on laptop" />
+      <img src="admissions-blue-bar_600px.jpg" alt="Universal trip group" />
+    </section>
   </main>
-<footer>
-  <nav>
-    <ul class="social-icons">
-      <li>
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/feed/" target="_blank">
-          <img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-          <img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon">
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/uscbcampuslife/" target="_blank">
-          <img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon">
-        </a>
-      </li>
-    </ul>
-  </nav>
-</footer>
+
+  <!-- Footer -->
+  <footer>
+    <nav>
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="Screenshot 2025-06-11 142725.png" alt="Facebook" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/feed/" target="_blank">
+            <img src="Screenshot 2025-06-11 142731.png" alt="LinkedIn" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+            <img src="Screenshot 2025-06-11 142741.png" alt="YouTube" class="social-icon">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/uscbcampuslife/" target="_blank">
+            <img src="Screenshot 2025-06-11 142747.png" alt="Instagram" class="social-icon">
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
+
 </body>
 </html>
