--- a/events.html
+++ b/events.html
@@ -8,54 +8,57 @@
 </head>
 <body>
   <!-- Header -->
-<header>
-  <figure>
-    <img alt="USCB Campus Life Logo" src="Campus Life 2C.png">
-  </figure>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="About.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="clubs.html">Clubs</a></li>
-      <li><a href="staff.html">Staff</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><input type="text" placeholder="Search" /></li>
-    </ul>
-  </nav>
-</header>
- <!-- Main content -->
+  <header>
+    <figure>
+      <img alt="USCB Campus Life Logo" src="Campus Life 2C.png">
+    </figure>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="clubs.html">Clubs</a></li>
+        <li><a href="staff.html">Staff</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><input type="text" placeholder="Search" /></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main content -->
   <main>
-  <center>  <h1 class="page-heading">EVENTS</h1> </center>
-<center>
+    <h1 class="page-heading">EVENTS</h1>
+
+    <!-- Calendar image -->
     <div class="calendar-image">
       <img src="White Green Modern Minimalist Content Calendar.png" alt="Campus Life Calendar" />
     </div>
-  <center>
-<section class="links-section">
-  <!-- Card 1 -->
-  <div class="link-card">
-    <img src="fins_up_orientation_leaders.jpg" alt="Presence">
-    <a href="https://uscb.presence.io/" target="_blank">Presence</a>
-  </div>
 
-  <!-- Card 2 -->
-  <div class="link-card">
-    <img src="volleyball_042.jpg" alt="IMLeagues">
-    <a href="https://www.imleagues.com/spa/portal/home" target="_blank">IMLeagues</a>
-  </div>
+    <!-- Centered 3-card grid -->
+    <section class="links-section">
+      <!-- Card 1 -->
+      <div class="link-card">
+        <img src="fins_up_orientation_leaders.jpg" alt="Presence">
+        <a href="https://uscb.presence.io/" target="_blank">Presence</a>
+      </div>
 
-  <!-- Card 3 -->
-  <div class="link-card">
-    <img src="by-the-river-team_600px.jpg" alt="USCB.edu">
-    <a href="https://www.uscb.edu/" target="_blank">USCB.edu</a>
-  </div> 
-</section>
-  </center>
+      <!-- Card 2 -->
+      <div class="link-card">
+        <img src="volleyball_042.jpg" alt="IMLeagues">
+        <a href="https://www.imleagues.com/spa/portal/home" target="_blank">IMLeagues</a>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="link-card">
+        <img src="by-the-river-team_600px.jpg" alt="USCB.edu">
+        <a href="https://www.uscb.edu/" target="_blank">USCB.edu</a>
+      </div> 
+    </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <nav>
       <ul class="social-icons">
