--- a/index.html
+++ b/index.html
@@ -93,4 +93,13 @@
 </footer>
 <script src="script.js"></script>
 </body>
+</div>
 </html>
+<!-- Under Construction Popup -->
+<div id="popup-overlay">
+  <div id="popup-box">
+    <h2>Notice</h2>
+    <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
+    <button onclick="closePopup()">Okay</button>
+  </div>
+</div>
