--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
   </nav>
 </footer>
 <script src="script.js"></script>
-  <!-- Under Construction Popup -->
-<div id="popup-overlay">
+<!-- Under Construction Popup -->
+<div id="popup-overlay" class="hidden">
   <div id="popup-box">
     <h2>Notice</h2>
     <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
-    <button onclick="closePopup()">Okay</button>
+    <button id="popup-close">Okay</button>
   </div>
 </body>
 </div>
