--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
     <button id="popup-close">Okay</button>
   </div>
+  <script src="popup.js"></script>
+</body>
+</html>
 </body>
 </html>
 </div>
