--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
 </footer>
 <script src="script.js"></script>
   <script src="popup.js"></script>
+  <div id="popup-overlay" class="hidden">
+  <div id="popup-box">
+    <h2>Notice</h2>
+    <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
+    <button id="popup-close">Okay</button>
+  </div>
+</div>
 </body>
 </html>
 </body>
