--- a/index.html
+++ b/index.html
@@ -91,13 +91,19 @@
     </ul>
   </nav>
 </footer>
+  <!-- Under-construction popup (hidden by default) -->
   <div id="popup-overlay" class="hidden">
-  <div id="popup-box">
-    <h2>Notice</h2>
-    <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
-    <button id="popup-close">Okay</button>
+    <div id="popup-box">
+      <h2>Notice</h2>
+      <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
+      <button id="popup-close">Okay</button>
+    </div>
   </div>
-     <script src="popup.js"></script>
+
+  <!-- Popup logic -->
+  <script src="popup.js"></script>
+</body>
+</html>
     <script src="script.js"></script>
  
 </body>
