--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     </ul>
   </nav>
 </footer>
-  <!-- Under-construction popup (hidden by default) -->
+    <script src="script.js"></script>
+  <!-- popup (hidden by default via the .hidden class) -->
   <div id="popup-overlay" class="hidden">
     <div id="popup-box">
       <h2>Notice</h2>
@@ -100,12 +101,8 @@
     </div>
   </div>
 
-  <!-- Popup logic -->
+  <!-- load the popup logic AFTER the popup HTML -->
   <script src="popup.js"></script>
-</body>
-</html>
-    <script src="script.js"></script>
- 
 </body>
 </html>
 
