--- a/index.html
+++ b/index.html
@@ -92,17 +92,77 @@
   </nav>
 </footer>
     <script src="script.js"></script>
-  <!-- popup (hidden by default via the .hidden class) -->
+ <!-- ►  POPUP STYLES  ◄ -->
+  <style>
+    /* popup container (covers whole screen) */
+    #popup-overlay {
+      position: fixed;
+      inset: 0;                       /* top:0 right:0 bottom:0 left:0 */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,.55);
+      z-index: 9999;
+    }
+
+    /* inner white box */
+    #popup-box {
+      background: #fff;
+      width: 90%;
+      max-width: 400px;
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 8px 16px rgba(0,0,0,.25);
+    }
+
+    #popup-box h2 { margin-top: 0; }
+
+    #popup-box button {
+      margin-top: 1.25rem;
+      padding: .5rem 1.4rem;
+      border: none;
+      border-radius: 6px;
+      background: #007a5e;
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    #popup-box button:hover { background:#005f47; }
+
+    /* utility */
+    .hidden { display:none; }
+  </style>
+</head>
+<body>
+
+  <!-- ▸▸  YOUR NORMAL PAGE CONTENT … header / main / footer  ◂◂ -->
+  <header> … </header>
+  <main> … </main>
+  <footer> … </footer>
+  <!-- ▸▸-----------------------------------------------------◂◂ -->
+
+  <!-- ▸▸  POP-UP  ◂◂ -->
   <div id="popup-overlay" class="hidden">
     <div id="popup-box">
       <h2>Notice</h2>
       <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
-      <button id="popup-close">Okay</button>
+      <!-- ✱ inline onclick = guaranteed close ✱ -->
+      <button onclick="document.getElementById('popup-overlay').classList.add('hidden')">
+        Okay
+      </button>
     </div>
   </div>
 
-  <!-- load the popup logic AFTER the popup HTML -->
-  <script src="popup.js"></script>
+  <!-- ►  SHOW ONCE-PER-SESSION LOGIC  ◄ -->
+  <script>
+    window.addEventListener('load', () => {
+      if (!sessionStorage.getItem('popupSeen')) {
+        document.getElementById('popup-overlay').classList.remove('hidden');
+        sessionStorage.setItem('popupSeen', 'true');
+      }
+    });
+  </script>
 </body>
 </html>
 
