--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
       <p>The <strong>Resources</strong> and <strong>News</strong> pages are currently under construction.</p>
       <button id="popup-close">Okay</button>
     </div>
-  </div>
+
 
   <!-- SCRIPT -->
   <script src="script.js"></script>
+<script src="popup.js"></script>
+
 </body>
 </html>
 
